Fix css issue that border is visible for a short time when image is not yet loaded

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,7 +26,7 @@ html {
 
 .photo {
   position: absolute;
-  top: 0;
+  top: -1000vw;
   width: 40vw;
   background-color: #ddd;
   border: 1vw solid white;
